[workspace]
members = [
  "benchmarks/runqueue/bench_*",
  "benchmarks/bench_*",
  "bench-multicore",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Elena Frank <elena.frank@proton.me>"]

[workspace.dependencies]
bench-multicore = { path = "bench-multicore" }

riot-rs = { git = "https://github.com/future-proof-iot/RIOT-rust.git", rev = "88bb5fb37c356c9157d028397f51a3b1ab42f48a", features = [
  "bench",
] }
riot-rs-boards = { git = "https://github.com/future-proof-iot/RIOT-rust.git", rev = "88bb5fb37c356c9157d028397f51a3b1ab42f48a" }
riot-rs-embassy = { git = "https://github.com/future-proof-iot/RIOT-rust.git", rev = "88bb5fb37c356c9157d028397f51a3b1ab42f48a" }
riot-rs-runqueue = { git = "https://github.com/future-proof-iot/RIOT-rust.git", rev = "88bb5fb37c356c9157d028397f51a3b1ab42f48a" }

embassy-executor = { version = "=0.6.0", default-features = false }
embassy-futures = { version = "0.1.1", default-features = false }
embassy-time = { version = "0.3", default-features = false }
embassy-time-driver = { version = "0.1.0", default-features = false }

esp-hal = { git = "https://github.com/kaspar030/esp-hal", branch = "for-riot-rs-2024-10-16-0.21.1+pr2377", default-features = false }
xtensa-lx-rt = { git = "https://github.com/kaspar030/esp-hal", branch = "for-riot-rs-2024-10-16-0.21.1+pr2377", default-features = false }

critical-section = { version = "1.1", default-features = false }
defmt = { version = "0.3.7" }

[workspace.lints.rust]
# ... until we figure out a way to generate a list of all used cfg variables
# across build configurations ...
unexpected_cfgs = "allow"


[patch.crates-io]
# riot-rs embassy fork
embassy-executor = { git = "https://github.com/kaspar030/embassy", branch = "for-riot-rs-2024-09-19" }
embassy-executor-macros = { git = "https://github.com/kaspar030/embassy", branch = "for-riot-rs-2024-09-19" }
embassy-hal-internal = { git = "https://github.com/kaspar030/embassy", branch = "for-riot-rs-2024-09-19" }
embassy-nrf = { git = "https://github.com/kaspar030/embassy", branch = "for-riot-rs-2024-09-19" }
embassy-rp = { git = "https://github.com/kaspar030/embassy", branch = "for-riot-rs-2024-09-19" }
embassy-sync = { git = "https://github.com/kaspar030/embassy", branch = "for-riot-rs-2024-09-19" }
embassy-time-driver = { git = "https://github.com/kaspar030/embassy", branch = "for-riot-rs-2024-09-19" }
embassy-time-queue-driver = { git = "https://github.com/kaspar030/embassy", branch = "for-riot-rs-2024-09-19" }
