[package]
name = "bench_async"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
bench-multicore = { workspace = true }

riot-rs = { workspace = true, features = ["time"] }
riot-rs-embassy = { workspace = true, features = ["time"] }
riot-rs-boards = { workspace = true }

critical-section = { workspace = true }
embassy-executor = { workspace = true }
embassy-time = { workspace = true }

[features]
dual-core = []
