[package]
name = "bench_busy_poll"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
bench-multicore = { workspace = true }

riot-rs = { workspace = true, features = ["time"] }
riot-rs-boards = { workspace = true }

embassy-executor = { workspace = true }
embassy-futures = { workspace = true }
embassy-time = { workspace = true }
embassy-time-driver = { workspace = true }

[features]
dual-core = []
affinity = []
poll = []
await = ["riot-rs/time"]
