[package]
name = "bench_critical_section"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
bench-multicore = { workspace = true }

riot-rs = { workspace = true }
riot-rs-boards = { workspace = true }

critical-section = { workspace = true }

[features]
dual-core = []
