[package]
name = "bench_leibnitz_pi"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
bench-multicore = { workspace = true }

riot-rs = { workspace = true }
riot-rs-boards = { workspace = true }

embassy-executor = { workspace = true }

[target.'cfg(target_arch = "xtensa")'.dependencies]
xtensa-lx-rt = { workspace = true, features = ["float-save-restore"] }

[features]
dual-core = []
