[package]
name = "bench_matrix_mult"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
bench-multicore = { workspace = true }

riot-rs = { workspace = true }
riot-rs-boards = { workspace = true }

embassy-executor = { workspace = true }

[features]
dual-core = []

n10 = []
n20 = []
n30 = []
n40 = []
