[package]
name = "bench_sched_yield_t"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
bench-multicore = { workspace = true }

riot-rs = { workspace = true }
riot-rs-boards = { workspace = true }

embassy-executor = { workspace = true }

[features]
dual-core = []
affinity = []
use-affinity = []
affinity-0 = ["use-affinity"]
affinity-1 = ["use-affinity"]
t1 = []
t2 = []
t3 = []
t4 = []
