[package]
name = "bench_runqueue_pop_head"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
bench-multicore = { workspace = true }

riot-rs = { workspace = true }
riot-rs-runqueue = { workspace = true }
riot-rs-boards = { workspace = true }

[features]
dual-core = []
